# vention.io-take-home

./: .gitignore  CMakeLists.txt  README.md  demo.mkv  package.xml
launch/: pick_place_poc.launch  pub_cube_pose.launch
src/: pick_place_poc.cpp  pub_cube_pose.cpp
