<?xml version="1.0"?>
<package>
  <name>vention_take_home</name>
  <version>0.1.0</version>
  <description>The vention_take_home package</description>
  <license>BSD</license>

  <maintainer email="afrancoeur94@gmail.com">afrancoeur</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>panda_moveit_config</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>

</package>